syntax = "proto3";

package realfin.oracle;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "realfin/oracle/params.proto";
import "realfin/oracle/price.proto";

option go_package = "realfin/x/oracle/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc SubmitPrice  (MsgSubmitPrice ) returns (MsgSubmitPriceResponse );
  rpc CreatePrice  (MsgCreatePrice ) returns (MsgCreatePriceResponse );
  rpc UpdatePrice  (MsgUpdatePrice ) returns (MsgUpdatePriceResponse );
  rpc DeletePrice  (MsgDeletePrice ) returns (MsgDeletePriceResponse );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                        "authority";
  option           (amino.name) = "realfin/x/oracle/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgSubmitPrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string symbol  = 2;
  uint64 price   = 3;
}

message MsgSubmitPriceResponse {}

message MsgCreatePrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string symbol  = 2;
  uint64 price   = 3;
}

message MsgCreatePriceResponse {
  uint64 id = 1;
}

message MsgUpdatePrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
  string symbol  = 3;
  uint64 price   = 4;
}

message MsgUpdatePriceResponse {}

message MsgDeletePrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeletePriceResponse {}

